--- a/projekk/ppc.css
+++ b/projekk/ppc.css
@@ -1,29 +1,67 @@
-.dialogBox {
+body {
+    background-color: cornsilk;
     font-family: math;
+    display: flex;
+    justify-content: center;
+}
+
+.monni {
+    width: 10rem;
+}
+
+.dirk {
+    font-size: small;
+    width: 20rem;
+    overflow: scroll;
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+    width: 8rem;
+    height: 4rem;
+    padding: 1rem 1rem 1rem 1rem;
+    border: 1px solid #000;
+}
+
+.topp {
+    display: flex;
+    align-items: center;
+    background-color: honeydew;
+    border: 1px solid #000;
+    height: 6rem;
+    width: 31rem;
+    top: 1rem;
+}
+.midd {
+    position: absolute;
+    background-color: lavender;
+    border: 1px solid #000;
+    height: 20rem;
+    width: 30rem;
+    overflow: scroll;
+    padding: 0 0 0 1rem;
+    top: 6rem;
+}
+
+.loww {
+    position: absolute;
+    background-color: lavenderblush;
+    border: 1px solid #000;
+    height: 3rem;
+    width: 29rem;
+    overflow: scroll;
+    padding: 1rem 1rem 1rem 1rem;
+    top: 26rem;
+    display: flex;
+    justify-content: center;
+}
+
+.dialogBox {
+    padding: 1rem;
     font-size: 16px;
     background-color: beige;
-    border: 1px solid #000;
-    padding: 1% 3%;
-    margin: 2%;
-    position: absolute;
-    width: 90%;
-    height: 70%;
     overflow-y: scroll;
+    height: 100%;
 }
 
-.actionBox {
-    background-color: cornsilk;
-    border: 1px solid #000;
-    position: absolute;
-    text-align: center;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: 1rem;
-    width: 20rem;
-    top: 80%;
-    left: 10%;
-}
-
-.action_top{
-    color: black;
-}
