--- a/projekk/templates/base.html
+++ b/projekk/templates/base.html
@@ -3,24 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dialog Box</title>
+  <title>projek</title>
   <link rel="stylesheet" href="../ppc.css">
 </head>
 <body>
-<h2>Rahaa: {{ inventory.raha }}</h2>
-
-  <div class="dialogBox" id="dialogBox">
+  <div class="topp">
+    <h2 class="monni"> Money: {{ inventory.raha }}</h2>
+    <h2> Dirk: {{ inventory.dirk }}</h2>
+    <h2> Code: {{ inventory.code }}</h2>
+  </div>
+  <div class="midd" id="dialogBox">
     {% for a in content %}
       <p>{{ a }}</p>
     {% endfor %}
   </div>
 
-  <div class="actionBox" id="actionBox">
-
+  <div class="loww">
+    <div class="actionBox" id="actionBox">
     <form action="{{ action }}" method="POST">
-      <input type="text" name="dirk" value="{{ inventory.dirk }}" hidden="hidden">
-      <input type="text" name="raha" value="{{ inventory.raha }}" hidden="hidden">
+      <label>
+        <input type="text" name="dirk" value="{{ inventory.dirk }}" hidden="hidden">
+        <input type="text" name="raha" value="{{ inventory.raha }}" hidden="hidden">
+      </label>
 
+      <div class="actionBox">
       {% if nappi1 %}
           <input type="submit" name="teko" value="{{ nappi1 }}">
       {% endif %}
@@ -39,8 +45,11 @@
       {% if nappi6 %}
           <input type="submit" name="teko" value="{{ nappi6 }}">
       {% endif %}
-
+      </div>
     </form>
   </div>
+  </div>
+
+
 </body>
 </html>
