--- a/projekk/templates/base.html
+++ b/projekk/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>projek</title>
-  <link rel="stylesheet" href="../ppc.css">
+  <link rel="stylesheet" href="../static/ppc.css">
 </head>
 <body>
   <div class="topp">
